# Laghos

./: .gitmodules  CMakeLists.txt  caliper.config  laghos.cpp  laghos_assembly.cpp  laghos_solver.cpp  laghos_solver.hpp  makefile
host-configs/blueos/: clang_coral_2017_11_27.cmake  gcc_7_1_0.cmake  nvcc_clang_coral_2017_10_06.cmake  nvcc_gcc_4_9_3.cmake  xl_coral_2017_10_13.cmake
hypre-2.10.0b/src/: HYPRE_config.h  config.status
hypre-2.10.0b/src/config/: Makefile.config  config.guess
metis-4.0.3/: graphchk  kmetis  mesh2dual  mesh2nodal  metis-4.0  oemetis  onmetis  partdmesh  partnmesh  pmetis
metis-4.0.3/Graphs/: mtest
raja/: rarray.hpp  rbilinearform.cpp  rbilininteg.cpp  rgridfunc.cpp  rvector.cpp  rvector.hpp
raja/kernels/: kGridFuncToQuad.c  kMass.c  kQuadratureData.c
scripts/: blueos_clang-coral-2017.11.10-hj.sh  blueos_gcc4.9.3.sh  blueos_gcc7.1.0_omptarget.sh  blueos_nvcc8.0_clang-coral-2017.10.13.sh  blueos_nvcc8.0_clang-coral-2017.10.13_both.sh  blueos_nvcc8.0_gcc4.9.3.sh  blueos_nvcc9.0_clang-coral-2017.09.06.sh  blueos_nvcc9.0_clang-coral-2017.10.06_omptarget.sh  blueos_nvcc9.0_clang-coral-2017.11.27_omptarget.sh  blueos_nvcc9.0_gcc4.9.3.sh  blueos_nvcc9.0_xl-coral-2017.10.13_omptarget.sh  setup_clone_blueos.sh
src/: .CMakeLists.txt.swp  CMakeLists.txt  laghos.cpp  laghos_assembly.cpp  laghos_solver.cpp  laghos_solver.hpp  profiling.cpp  profiling.hpp
src/raja/: CMakeLists.txt  raja.hpp  rmalloc.hpp
src/raja/general/: rarray.hpp  rmalloc.hpp  rmemcpy.cpp  rtable.cpp
src/raja/kernels/: CMakeLists.txt  defines.hpp  rForce.cpp  rLocalToGlobal.cpp  rQDataInit.cpp  rQDataUpdate.cpp  raja.hpp  vector_dot.cpp
src/raja/kernels/blas/: vector_axpy.cpp  vector_clear_dofs.cpp  vector_dot.cpp  vector_get_subvector.cpp  vector_map_dofs.cpp  vector_neg.cpp  vector_op_eq.cpp  vector_set_subvector.cpp  vector_set_subvector_const.cpp  vector_vec_add.cpp  vector_vec_mul.cpp  vector_vec_sub.cpp  vector_xpay.cpp  vector_xsy.cpp
src/raja/kernels/force/: rForce.cpp
src/raja/kernels/geom/: rInitGeom.cpp
src/raja/kernels/include/: forall.hpp
src/raja/kernels/maps/: rGlobalToLocal.cpp  rLocalToGlobal.cpp  rMapping.cpp
src/raja/kernels/mass/: rMassAssemble.cpp  rMassMultAdd.cpp
src/raja/kernels/quad/: rGridFuncToQuad.cpp  rQDataInit.cpp  rQDataUpdate.cpp
src/raja/kernels/share/: rForceS.cpp  rGridFuncToQuadS.cpp  rMassAssembleS.cpp  rMassMultAddS.cpp  rQDataUpdateS.cpp
src/raja/linalg/: rvector.cpp
timing/: collect_timings_ray_raja_cuda.sh  collect_timings_ray_raja_cuda_2D.sh  collect_timings_ray_raja_cuda_3D.sh  rates.py
